2021-11-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/core_drop_files.rb: Added

2021-11-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_first_person_maze.rb: Added

2021-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/raylib_opengl_interop.rb: Added
	* examples/models_geometric_shapes.rb: Added

2021-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/rlgl_compute_shader.rb: Added
	* examples/models_billboard.rb: Added

2021-11-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/physics_demo.rb: Added
	* examples/textures_background_scrolling.rb: Added
	* Added dll build scripts for Windows

2021-11-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_box_collisions.rb: Added
	* Added physac wrapper and wrapper generator
	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/2021f09db4df72aea9f963666435bddf0718df94 )

2021-11-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Bugfix: Generate correct signatures for raymath and rlgl
	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/d18f3fca30858916546908e40cc2e0cea2be03ca )
	* Bugfix: Fixed wrong signature in raymath.rb
	* examples/audio_sound_loading.rb: Added
	* examples/audio_music_stream.rb: Added

2021-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added raygui wrapper and wrapper generator
	* examples/shapes_draw_circle_sector.rb: Added

2021-10-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/text_unicode.rb: Added
	* examples/textures_bunnymark.rb: Added

2021-10-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/core_loading_thread.rb: Added
	* examples/bitmap_font.rb and font/VP16Font_XNA.png: Added

2021-10-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_waving_cubes.rb: Added

2021-10-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_rlgl_solar_system.rb: Added
	* Bugfix: DEG2RAD and RAD2DEG duplication