@@ -1,3 +1,7 @@
+2021-11-14  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/core_storage_values.rb: Added
+
 2021-11-13  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/core_drop_files.rb: Added
